Corregidos algunos bugs con el hovering. Falta el scroll para web en la seccion de category-wrap

--- a/styles.css
+++ b/styles.css
@@ -151,7 +151,7 @@ a{
     font-weight: 600;
 }
 
-svg:not(.search-input-wrapper svg){
+svg:not(.search-input-wrapper svg, .nav-bar-option svg){
     border-radius: 15px;
     background-color: var(--wallapop-color-blue);
 }
@@ -301,8 +301,8 @@ height: 80%;
 .categories-element-container{
 display: flex;
 flex-wrap: nowrap;
-overflow-x: scroll;
 scroll-behavior: smooth;
+overflow-x: scroll;
 
 }
 
@@ -1040,8 +1040,21 @@ align-content: center;
             max-height: 100vh;
         }
 
+        .arrow-wrapper{
+            display: flex;
+            align-items: center;
+            width: 40px;
+            height: 40px;
+            margin: 0;
+            padding-right: 4.5rem;
+        }
+        .arrow-right{
+            position: absolute;
+        }
+
         .arrow-left{
             display: block;
+            position: absolute;
         }
 
         .categories-wrap{
@@ -1052,31 +1065,31 @@ align-content: center;
             font-size: 2rem;
             margin-bottom: 1rem;
         }
+    
+        .categories-element-wrapper{
+            padding: 0;
+            justify-content:normal;
+            width: 100%;
+            position:relative;
+        }
 
         .categories-element-container{
+            align-items: baseline;
+            padding-left: 1.5rem;
             gap: 0.5rem;
-            overflow-x: scroll;
+            width: 1500px;
+            overflow-x:scroll;
         }
 
         .categories-element{
-            width: 16%;
             max-height:30% ;
+            width: 150px;
         }
 
         .categories-element a{
             height: 10%;
             scroll-snap-align: start;
             flex-shrink: 0;
-        }
-
-        .categories-element-wrapper{
-            overflow-x: scroll;
-            scroll-snap-type: x mandatory;
-            height: 100%;
-        }
-
-        .categories-element-container{
-            white-space: nowrap;
         }
 
         .home-collections{
